# UMinho-SolarSystem-Scene-Engine-CPP

./: .gitattributes  .gitignore  README.md
Engine/: inicio.txt
Phase1/Engine/: a.out  main.cpp  xml.xml
Phase1/Generator/: MakeFile  Makefile  generator  inicio.txt  main.cpp
Phase1/Generator/figures/: box.cpp  box.h  box.hpp  cone.cpp  cone.h  plane.cpp  plane.h  sphere.cpp
Phase1/Output/: box.3d  cone.3d  inicio.txt  plane.3d  plane_2_3.3d  sphere.3d  sphere_1_10_10.3d
Phase1/figures/: inicio.txt
Phase2/Engine/: CMakeLists.txt  main.cpp  xml.xml
Phase2/Generator/: Makefile  generator  main.cpp
Phase2/Generator/figures/: box.cpp  box.hpp  cone.cpp  plane.cpp  plane.hpp  sphere.cpp  sphere.hpp
Phase2/Output/: sphere.3d
Phase2/TestFiles/: Demo Scene.xml
Phase3/Apresentação/: apresentacao.xml
Phase3/Engine/: main.cpp  xml.xml
Phase3/Generator/: Makefile  generator  main.cpp
Phase3/Generator/figures/: bezier.cpp  cone.hpp  plane.hpp  sphere.hpp
Phase3/TestFiles/Teste 1/: xml.xml
Phase4/Apresentacao/: apresentacao.xml  bezier_10.3d
Phase4/Apresentação/: apresentacao.xml
Phase4/Engine/: CMakeLists.txt  main.cpp  xml.xml
Phase4/Generator/: generator
Phase4/Generator/figures/: bezier.cpp  bezier.hpp  box.cpp  box.hpp  cone.cpp  plane.cpp  sphere.cpp
Phase4/Output/: bezier_10.3d  box_2_3.3d  cone_1_2_4_3.3d  plane_2_3.3d  sphere_1_8_8.3d
Phase4/TestFiles/: Demo Scene.xml
